@@ -10248,7 +10248,9 @@ int xodtemplate_register_serviceescalation(xodtemplate_serviceescalation *this_s
 	/* add the contact groups */
 	if(this_serviceescalation->contact_groups!=NULL){
 
-		for(contact_group=strtok(this_serviceescalation->contact_groups,", ");contact_group!=NULL;contact_group=strtok(NULL,", ")){
+		for(contact_group=strtok(this_serviceescalation->contact_groups,",");contact_group!=NULL;contact_group=strtok(NULL,", ")){
+
+			strip(contact_group);
 			new_contactgroupsmember=add_contactgroup_to_serviceescalation(new_serviceescalation,contact_group);
 			if(new_contactgroupsmember==NULL){
 #ifdef NSCORE
@@ -10262,7 +10264,9 @@ int xodtemplate_register_serviceescalation(xodtemplate_serviceescalation *this_s
 	/* add the contacts */
 	if(this_serviceescalation->contacts!=NULL){
 
-		for(contact_name=strtok(this_serviceescalation->contacts,", ");contact_name!=NULL;contact_name=strtok(NULL,", ")){
+		for(contact_name=strtok(this_serviceescalation->contacts,",");contact_name!=NULL;contact_name=strtok(NULL,", ")){
+
+			strip(contact_name);
 			new_contactsmember=add_contact_to_serviceescalation(new_serviceescalation,contact_name);
 			if(new_contactsmember==NULL){
 #ifdef NSCORE
@@ -10583,7 +10587,7 @@ int xodtemplate_register_hostescalation(xodtemplate_hostescalation *this_hostesc
 		return ERROR;
 	        }
 
-	/* add all contact groups*/
+	/* add all contact groups */
 	if(this_hostescalation->contact_groups!=NULL){
 
 		for(contact_group=strtok(this_hostescalation->contact_groups,",");contact_group!=NULL;contact_group=strtok(NULL,",")){
@@ -10602,7 +10606,9 @@ int xodtemplate_register_hostescalation(xodtemplate_hostescalation *this_hostesc
 	/* add the contacts */
 	if(this_hostescalation->contacts!=NULL){
 
-		for(contact_name=strtok(this_hostescalation->contacts,", ");contact_name!=NULL;contact_name=strtok(NULL,", ")){
+		for(contact_name=strtok(this_hostescalation->contacts,",");contact_name!=NULL;contact_name=strtok(NULL,", ")){
+
+			strip(contact_name);
 			new_contactsmember=add_contact_to_hostescalation(new_hostescalation,contact_name);
 			if(new_contactsmember==NULL){
 #ifdef NSCORE
